<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StormyUpdated</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_forecast_data">There\'s no data to display</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="today_label">Today</string>
    <string name="location">Alcatraz Island, CA</string>
    <string name="dashes">--</string>
    <string name="dots">...</string>
    <string name="humidity">HUMIDITY</string>
    <string name="rain_snow">RAIN/SNOW?</string>
    <string name="getting_current_weather">Getting current weather ...</string>
    <string name="details">Details</string>
    <string name="this_week">This Week</string>
    <string name="week">Week</string>
    <string name="refresh_button">refresh_button</string>
    <string name="current_weather_icon">current_weather_icon</string>
    <string name="degree_image">degree_image</string>

</resources>
