<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:baselineAligned="false">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_weight="1"
        android:id="@+id/weather_overview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:context="com.teamtreehouse.stormy.ui.MainActivity"
        android:background="@drawable/bg_gradient"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/refreshImageView"
            app:srcCompat="@drawable/refresh"
            android:contentDescription="@string/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/refreshImageView"/>

        <TextView
            android:id="@+id/locationLabel"
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timeLabel"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:id="@+id/iconImageView"
            app:srcCompat="@drawable/cloudy_night"
            android:contentDescription="@string/current_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/locationLabel"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_toLeftOf="@+id/locationLabel"/>

        <TextView
            android:id="@+id/timeLabel"
            android:text="@string/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/temperatureLabel"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/white_half_transparent"/>

        <TextView
            android:id="@+id/temperatureLabel"
            android:text="@string/dashes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="150sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/degreeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/degree"
            android:layout_alignTop="@+id/temperatureLabel"
            android:layout_toRightOf="@+id/temperatureLabel"
            android:layout_toEndOf="@+id/temperatureLabel"
            android:paddingTop="50dp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureLabel"
            android:layout_centerHorizontal="true"
            android:weightSum="100"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/humidityLabel"
                    android:text="@string/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_half_transparent"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/humidityValue"
                    android:text="@string/dashes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/precipLabel"
                    android:text="@string/rain_snow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white_half_transparent"/>

                <TextView
                    android:id="@+id/precipValue"
                    android:text="@string/dashes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/summaryLabel"
            android:text="@string/getting_current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_marginTop="75dp"
            android:textSize="18sp"
            android:textAlignment="center"/>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/hourlyWeatherLayout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:padding="10dp">

        <TextView
            android:id="@+id/todayLabel"
            android:text="@string/today_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hourlyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayLabel"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dailyWeatherRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_gradient"
        android:padding="10dp">

        <TextView
            android:id="@+id/dailyWeatherLabel"
            android:text="@string/this_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dailyWeatherRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dailyWeatherLabel"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>
</LinearLayout>